hphp/hack/test/typecheck/destructure/punning_in_expressions_bad.php.exp
ERROR: File "punning_in_expressions_bad.php", line 7, characters 14-15:
You are using the return value of a `void` function (Typing[4119])
  File "punning_in_expressions_bad.php", line 7, characters 14-15:
  A `void` function doesn't return a value. (`$_` is a placeholder variable not meant to be used)
